fix landscape display on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -334,9 +334,9 @@ header .intro-text .intro-heading {
         margin-bottom: 107px;
         text-transform: uppercase;
         font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 500%;
+        font-size: 350%;
         font-weight: 700;
-        line-height: 50px;
+        line-height: 35px;
         opacity: 1;
     }
 }
